k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nid
  labels:
    app: network-intrusion-detection
